manifests/synapse/02-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    image.openshift.io/triggers: |
      [
        {"from":{"kind":"ImageStreamTag","name":"synapse:stable"},"fieldPath":"spec.template.spec.containers[?(@.name==\"synapse\")].image"}
      ]
  labels:
    app: synapse
    service: synapse
  name: synapse
  namespace: matrix
spec:
  replicas: 1
  selector:
    deploymentconfig: synapse
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: synapse
        service: synapse
        deploymentconfig: synapse
    spec:
      containers:
        - image: ""
          args:
            - -m
            - synapse.app.homeserver
            - -c
            - /synapse/config/homeserver.yaml
          command:
            - python
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /_matrix/client/versions
              port: 8008
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          name: synapse
          ports:
            - containerPort: 8008
              protocol: TCP
          resources:
            requests:
              cpu: 2
              memory: 1Gi
            limits:
              cpu: 2
              memory: 1Gi
          volumeMounts:
            - mountPath: /synapse/data
              name: volume-data
            - mountPath: /synapse/keys
              name: volume-keys
              readOnly: true
            - mountPath: /synapse/config
              name: volume-config
            - mountPath: /synapse/templates
              name: volume-templates
            - mountPath: /freenode-config
              name: volume-freenode
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: volume-data
          emptyDir: {}
        - name: volume-keys
          secret:
            defaultMode: 420
            secretName: tls-secrets
        - configMap:
            defaultMode: 420
            name: matrix-configs
          name: volume-config
        - configMap:
            defaultMode: 420
            name: notif-templates
          name: volume-templates
        - name: volume-freenode
          secret:
            defaultMode: 420
            secretName: freenode-config
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - synapse
        from:
          kind: ImageStreamTag
          name: "synapse:stable"
      type: ImageChange
    - type: ConfigChange
