manifests/synapse/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: synapse
    service: synapse
  name: synapse
  namespace: synapse
spec:
  host: matrix-matrix.apps.vrutkovs-2.devcluster.openshift.com
  path: /_matrix/
  port:
    targetPort: 8008
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: web
    weight: 100
  wildcardPolicy: None
